--- a/util/sugar/src/scss/_sugar.scss
+++ b/util/sugar/src/scss/_sugar.scss
@@ -9,10 +9,12 @@
 @import 'icon/all';
 @import 'image/all';
 @import 'layout/all';
+@import 'link/all';
 @import 'list/all';
 @import 'loader/all';
 @import 'meta/all';
 @import 'responsive/all';
+@import 'screen-reader/all';
 @import 'scrollbar/all';
 @import 'shadow/smooth-shadow';
 @import 'shape/all';
