--- a/util/sugar/src/scss/core/class/helper/_all.scss
+++ b/util/sugar/src/scss/core/class/helper/_all.scss
@@ -5,14 +5,19 @@
 @import 'display';
 @import 'filter';
 @import 'font';
+@import 'link';
 @import 'margin';
 @import 'media';
+@import 'overflow';
 @import 'padding';
 @import 'pointer';
 @import 'position';
 @import 'pull';
 @import 'ratio';
+@import 'screen-reader';
 @import 'size';
 @import 'text';
 @import 'transition';
 @import 'transmation';
+@import 'user-select';
+@import 'vertical-align';
