--- a/util/sugar/src/scss/core/class/helper/_padding.scss
+++ b/util/sugar/src/scss/core/class/helper/_padding.scss
@@ -6,7 +6,7 @@
     @each $name, $size in $sizes {
 
       @if class-match-namespace("sugar.helper.padding.#{$name}") {
-        $cname: selector("p-#{$name}");
+        $cname: selector("s-p-#{$name}");
         /**
           * @name        #{$cname}
           * @namespace       scss.core.class
@@ -36,7 +36,7 @@
 
 
       @if class-match-namespace("sugar.helper.padding.bottom.#{$name}") {
-        $cname: selector("p-b-#{$name}");
+        $cname: selector("s-p-b-#{$name}");
         /**
           * @name       	#{$cname}
           * @namespace       scss.core.class
@@ -60,7 +60,7 @@
 
 
       @if class-match-namespace("sugar.helper.padding.top.#{$name}") {
-        $cname: selector("p-t-#{$name}");
+        $cname: selector("s-p-t-#{$name}");
         /**
           * @name       	#{$cname}
           * @namespace       scss.core.class
@@ -84,7 +84,7 @@
 
 
       @if class-match-namespace("sugar.helper.padding.left.#{$name}") {
-        $cname: selector("p-l-#{$name}");
+        $cname: selector("s-p-l-#{$name}");
         /**
           * @name       	#{$cname}
           * @namespace       scss.core.class
@@ -108,7 +108,7 @@
 
 
       @if class-match-namespace("sugar.helper.padding.right.#{$name}") {
-        $cname: selector("p-r-#{$name}");
+        $cname: selector("s-p-r-#{$name}");
         /**
           * @name       	#{$cname}
           * @namespace       scss.core.class
@@ -132,7 +132,7 @@
 
 
       @if class-match-namespace("sugar.helper.padding.side.#{$name}") {
-        $cname: selector("p-s-#{$name}");
+        $cname: selector("s-p-s-#{$name}");
         /**
           * @name       	#{$cname}
           * @namespace       scss.core.class
@@ -156,11 +156,36 @@
       }
 
 
+      @if class-match-namespace("sugar.helper.padding.y.#{$name}") {
+        $cname: selector("s-p-y-#{$name}");
+        /**
+          * @name       	#{$cname}
+          * @namespace       scss.core.class
+          * @class-namespace           sugar.helper.padding.y.#{$name}
+          * @type        class
+          *
+          * Set the **top and bottom** padding to the **#{$size}**
+          *
+          * @example 	html
+          * <div class="#{$cname}" style="border:1px solid #{color(primary)}; width:150px; height:150px;">
+          * 	<div style="background:#{color(secondary)}; width:100%; height:100%"></div>
+          * </div>
+          *
+          * @since       1.0.0
+          * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+          */
+        .#{$cname} {
+          padding-top: space($name);
+          padding-bottom: space($name);
+        }
+      }
+
+
     }
 
     @if class-match-namespace("sugar.helper.padding.no.top") {
       /**
-      * @name       	no-p-t
+      * @name       	s-no-p-t
       * @namespace       scss.core.class
       * @class-namespace           sugar.helper.padding.no.top
       * @type        class
@@ -168,12 +193,12 @@
       * Reset **top** padding
       *
       * @example 	html
-      * <div class="no-p-t" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+      * <div class="s-no-p-t" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
       *
       * @since       1.0.0
       * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
       */
-      .no-p-t {
+      .s-no-p-t {
         padding-top: 0 !important;
       }
     }
@@ -181,7 +206,7 @@
 
     @if class-match-namespace("sugar.helper.padding.no.right") {
       /**
-        * @name       	no-p-r
+        * @name       	s-no-p-r
         * @namespace       scss.core.class
         * @class-namespace           sugar.helper.padding.no.right
         * @type        class
@@ -189,7 +214,7 @@
         * Reset **right** padding
         *
         * @example 	html
-        * <div class="no-p-r" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="s-no-p-r" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
@@ -202,7 +227,7 @@
 
     @if class-match-namespace("sugar.helper.padding.no.bottom") {
       /**
-        * @name       	no-p-b
+        * @name       	s-no-p-b
         * @namespace       scss.core.class
         * @class-namespace           sugar.helper.padding.no.bottom
         * @type        class
@@ -210,12 +235,12 @@
         * Reset **bottom** padding
         *
         * @example 	html
-        * <div class="no-p-b" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="s-no-p-b" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .no-p-b {
+      .s-no-p-b {
         padding-bottom: 0 !important;
       }
     }
@@ -223,7 +248,7 @@
 
     @if class-match-namespace("sugar.helper.padding.no.left") {
       /**
-        * @name       	no-p-l
+        * @name       	s-no-p-l
         * @namespace       scss.core.class
         * @class-namespace           sugar.helper.padding.no.left
         * @type        class
@@ -231,12 +256,12 @@
         * Reset **left** padding
         *
         * @example 	html
-        * <div class="no-p-l" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="s-no-p-l" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .no-p-l {
+      .s-no-p-l {
         padding-left: 0 !important;
       }
     }
@@ -244,7 +269,7 @@
 
     @if class-match-namespace("sugar.helper.padding.no.side") {
       /**
-        * @name       	no-p-s
+        * @name       	s-no-p-s
         * @namespace       scss.core.class
         * @class-namespace           sugar.helper.padding.no.side
         * @type        class
@@ -252,14 +277,36 @@
         * Reset **left** and **right** paddings
         *
         * @example 	html
-        * <div class="no-p-s" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        * <div class="s-no-p-s" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
         *
         * @since       1.0.0
         * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
         */
-      .no-p-s {
+      .s-no-p-s {
         padding-left: 0 !important;
         padding-right: 0 !important;
+      }
+    }
+
+
+    @if class-match-namespace("sugar.helper.padding.no.y") {
+      /**
+        * @name       	s-no-p-y
+        * @namespace       scss.core.class
+        * @class-namespace           sugar.helper.padding.no.y
+        * @type        class
+        *
+        * Reset **top** and **bottom** paddings
+        *
+        * @example 	html
+        * <div class="s-no-p-y" style="display:inline-block; background:#{color(primary)}; width:50px; height:50px;"></div>
+        *
+        * @since       1.0.0
+        * @author 			Olivier Bossel <olivier.bossel@gmail.com> (https://olivierbossel.com)
+        */
+      .s-no-p-y {
+        padding-top: 0 !important;
+        padding-bottom: 0 !important;
       }
     }
 
